# Path-Smoothing-and-Trajectory-Control-in-2D-Space

./: CMakeLists.txt  README.md
config/: map.rviz  nav2_params.yaml  trajectory_execution.csv  view_bot.rviz
description/: robot_core.xacro
launch/: launch_sim.launch.py  rsp.launch.py  script_launch.py
scripts/: frontier_test.py  nav2_copy.py  path.py  path_executor.py  tf_test.py  waypoint.py
